EVents page merge

--- a/src/pages/catering/catering.html
+++ b/src/pages/catering/catering.html
@@ -153,160 +153,251 @@
 
   <div *ngIf="!checkApp">
     <ion-row style="flex-wrap: inherit;" class="cover2">
-      <h2 class="title welcomeText headFont">About Kusina Filipina</h2>
-
+      <h2 class="title welcomeText headFont">Events & Caterings</h2>
+  
     </ion-row>
-    <ion-row no-padding>
-      <ion-col col-lg-5 offset-lg-1 col-xl-5 offset-xl-1>
-        <div class="contentSections">
-          <h2 class="title curvyFont welcomeText goldenText" style="text-align: left !important;">About Us</h2>
-          <h2 class="mainTexts headFont">DISCOVER OUR STORY</h2>
-          <div class="subTexts">
-            <p>Our family arrived at the City of Angels in 1990 in search of greener pasture. Shortly after, we’ve
-              realized how much we missed the food back home in the Philippines. So we pooled all our resources to
-              create our own restaurant.</p>
-
-            <p>
-
-              We wanted our fellow Filipino immigrants in Los Angeles to experience authentic Filipino cuisine once
-              more. We also wanted the rest of LA to get a taste of Filipino cooking.</p>
-
-            <p>The Philippines’ location makes it a melting pot of Oriental culture. Filipino cuisine has advanced by
-              absorbing the best parts of other Asian cuisines. We were confident authentic Filipino food would not lose
-              no matter the location.</p>
-
-            <p>We only employ Chefs who were originally from the Philippines. And our restaurant is designed to provide
-              a traditional Filipino setting and ambiance.</p>
-
-            <p>Our 25 years of culinary experience guarantees that when it comes to providing an authentic Filipino
-              dining experience, nobody does it better than us.
-            </p>
-          </div>
-          <div class="subDesc">
-            <h2>Arizenia</h2>
-            <h3>JOHN ARIZENIA</h3>
-            <h4 class="subTexts headFont">Founder of Restaurant</h4>
-          </div>
-
+  
+    <ion-row align-items-center="" class="row">
+      <ion-col class="col" col-12="" col-lg-6="" push-lg-3="" class="text-menu">
+        <div class="container" style="text-align: center">
+          <p class="Kusina" style="font-size:60px;margin-bottom: 30px;margin-top: 60px"> <span>EVENTS</span></p>
         </div>
       </ion-col>
-      <ion-col col-lg-5 col-xl-6>
-        <div class="aboutImage">
-          <img src="assets/imgs/aboutConte.png" alt="">
-        </div>
-
-      </ion-col>
-
+  
     </ion-row>
-
-    <ion-row no-padding>
-      <ion-col no-margin no-padding col-md-6 col-lg-3 col-xl-3 (click)="showPortfolio(l);" *ngFor="let l of categories"
-        class="image-holder2 contentSections secndSection">
-
-        <div class="show2">
-          <ion-icon name="{{l.icon}}" class="goldenText"></ion-icon>
-          <div class="subtitle">
-            <h2>{{ l.numbers }}</h2>
-            <h6>{{ l.name }}</h6>
-          </div>
-        </div>
-      </ion-col>
-    </ion-row>
-    <div class="contentSections thSection">
-      <h2 class="title curvyFont welcomeText goldenText" style="text-align: center !important;">Testimonials</h2>
-      <h2 class="mainTexts headFont">CUSTOMERS REVIEW</h2>
-      <ion-slides class="" pager>
-        <ion-slide *ngFor="let t of testimonials" style="height:40vw;">
-          <img src="assets/imgs/{{t.image}}" alt="">
-          <div class="subTexts2">
-            <p style="width:80%;margin: auto"><span class="goldenText">"</span>{{t.testim}}<span
-                class="goldenText">"</span></p>
-
-
-          </div>
-
-          <h2 class="mainTexts headFont">{{t.name}}</h2>
-        </ion-slide>
-      </ion-slides>
-    </div>
-    <div class="first-section2 space">
+  
+    <ion-grid>
       <ion-row no-padding>
-        <ion-col col-lg-6 col-xl-6>
-          <div class="mapContainer">
-            <div #map id="map"></div>
+        <ion-col col-lg-8 col-xl-8 style="padding: 0px 30px 0px 80px">
+          <div class="aboutImage">
+  
           </div>
         </ion-col>
-
-        <ion-col col-lg-6 col-xl-6>
-          <div class="contentSections2 timeSched">
-            <h2 class="title curvyFont welcomeText goldenText">Business Hours</h2>
-            <h2 class="mainTexts headFont" style="font-size:2vw !important"><strong>OPEN FOR SPECIAL OCCASIONS</strong>
-            </h2>
-            <div class="alarmIcon">
-              <ion-icon name="alarm" class="goldenText"></ion-icon>
+        <ion-col col-lg-4 col-xl-4 style="padding: 0px 80px 0px 10px">
+                <div class="contentSections3" style="padding-bottom: 50px !important;">
+        <div class="subTexts">
+          <h2 class="mainTitle">Event Details</h2>
+          <hr class="smallLine">
+          <h3 class="eventTitle">Event Title</h3>
+          <div class="eventDetailsContainer">
+            <div class="eventDetails">
+              <h2><i class="far fa-calendar-alt" ></i> Start Date</h2>
+              <h3>03 April, 2019</h3>
             </div>
-            <div class="sched subTexts">
-              <h4 style="font-size: 1vw !important;">Monday - Saturday: 10:00am - 10:00pm</h4>
-              <h4 style="font-size: 1vw !important;">Sunday: 10:00am - 04:00pm</h4>
+            <div class="eventDetails">
+              <h2><i  class="far fa-clock"></i> Start Time</h2>
+              <h3>05:00</h3>
             </div>
-            <button ion-button class="menu-button" (click)="callNow()">
-              <h2>CONTACT US</h2>
-            </button>
+            <div class="eventDetails">
+              <h2><i class="far fa-calendar-alt"></i> End Date</h2>
+              <h3>20 February, 2019</h3>
+            </div>
+            <div class="eventDetails">
+              <h2><i class="far fa-clock"></i> End Time</h2>
+              <h3>00:00</h3>
+            </div>
+            <div class="eventDetails">
+              <h2><i  class="fas fa-map-marker"></i> Location</h2>
+              <h3>New York</h3>
+            </div>
           </div>
+          <button ion-button class="menu-button" (click)="goTo()">
+            <h2>CONTACT US</h2>
+          </button>
+        </div>
+
+      </div>
+       
+        </ion-col>
+  
+      </ion-row>
+    </ion-grid>
+  
+    <ion-grid>
+      <ion-row>
+        <ion-col col-12 style="margin-top: 10px !important;padding-left: 80px;padding-right:80px;
+          margin-bottom: 20px !important;">
+          <hr class="sectionLine">
         </ion-col>
       </ion-row>
-    </div>
-
-  </div>
-
-  <div class="first-section footer" style="padding-top: 0px !important;margin-top: -10px !important" *ngIf="!checkApp">
-    <ion-row align-items-center="" class="row">
-      <ion-col class="col" col-12="" col-lg-3="" class="text-menu">
-        <div class="container contactUs" style="text-align: left">
-          <h2 class="headFont" style="margin-bottom: 0px;">BUSINESS HOURS</h2>
-          <hr style="width: 20%;height: 30px;color: #C49433 !important; text-align: left">
-          <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Monday -
-              Thursday: </span>06AM - 10PM</p>
-          <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Friday -
-              Saturday: </span>10AM - 11:30PM</p>
-          <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Sunday:
-            </span>1PM - 10PM</p>
-
-        </div>
-      </ion-col>
-      <ion-col class="col" col-12="" col-lg-6="" text-center="">
-        <div class="container contactUs" style="text-align: center">
-          <img src="assets/imgs/logoName.png" alt="" style="height:100px;margin:0px;">
-          <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;">
-            <ion-icon name="pin" color="charcoal" style="font-size:1.5em"></ion-icon> 503 Old Buffalo Street NY, 205
-          </p>
-          <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;">
-            <ion-icon name="call" color="charcoal" style="font-size:1.5em"></ion-icon>(+088) 589-8745
-          </p>
-          <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;">
-            <ion-icon name="mail-open" color="charcoal" style="font-size:1.5em"></ion-icon><span style="color:#C49433">
-              infoname@gmail.com</span>
-          </p>
-        </div>
-
-      </ion-col>
-      <ion-col class="col" col-12="" col-lg-3="" text-center="">
-        <div class="container contactUs" style="text-align: left;">
-          <h2 class="headFont" style="margin-bottom: 0px;">SUBSCRIBE NOW</h2>
-          <hr style="width: 20%;height: 30px;color: #C49433 !important; text-align: left">
-          <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"> Sign up now to our newsletter to get latest
-            food items and our new events. This theme will help you organize your site without any technical skills.</p>
-
-          <div class="inputSection">
-            <input type="text" placeholder="Email Address">
-            <button>SIGN UP</button>
+    </ion-grid>
+  
+    <ion-grid style="margin-bottom: 50px;">
+      <ion-row no-padding>
+  
+        <ion-col col-lg-4 col-xl-4 style="padding: 0px 30px 0px 80px">
+         <div class="contentSections3" style="padding-bottom: 50px !important;">
+        <div class="subTexts">
+          <h2 class="mainTitle">Event Details</h2>
+          <hr class="smallLine">
+          <h3 class="eventTitle">Event Title</h3>
+          <div class="eventDetailsContainer">
+            <div class="eventDetails">
+              <h2><i class="far fa-calendar-alt" ></i> Start Date</h2>
+              <h3>03 April, 2019</h3>
+            </div>
+            <div class="eventDetails">
+              <h2><i  class="far fa-clock"></i> Start Time</h2>
+              <h3>05:00</h3>
+            </div>
+            <div class="eventDetails">
+              <h2><i class="far fa-calendar-alt"></i> End Date</h2>
+              <h3>20 February, 2019</h3>
+            </div>
+            <div class="eventDetails">
+              <h2><i class="far fa-clock"></i> End Time</h2>
+              <h3>00:00</h3>
+            </div>
+            <div class="eventDetails">
+              <h2><i  class="fas fa-map-marker"></i> Location</h2>
+              <h3>New York</h3>
+            </div>
           </div>
-
+          <button ion-button class="menu-button" (click)="goTo()">
+            <h2>CONTACT US</h2>
+          </button>
         </div>
 
+      </div>
+        </ion-col>
+  
+        <ion-col col-lg-8 col-xl-8 style="padding: 0px 80px 0px 10px">
+          <div class="aboutImage">
+  
+          </div>
+        </ion-col>
+  
+      </ion-row>
+    </ion-grid>
+  
+    <ion-row align-items-center="" class="row" style="background-color: #f5f5f5">
+      <ion-col class="col" col-12="" col-lg-6="" push-lg-3="" class="text-menu">
+        <div class="container" style="text-align: center">
+          <p class="Kusina" style="font-size:50px;margin-bottom: 30px;margin-top: 30px"> <span>CATERING SERVICES</span>
+          </p>
+        </div>
       </ion-col>
+  
     </ion-row>
+  
+    <ion-grid style="background-color: #f5f5f5; padding-bottom: 60px;">
+      <ion-row no-padding>
+  
+        <ion-col col-lg-6 col-xl-6 style="padding: 0px 30px 0px 80px">
+          <div class="aboutImage">
+            <h2 class="title welcomeText titleText" style="padding: 50px 10px;">Catering Service A</h2>
+            <p class="titleText" style="color:white;padding: 0px 30px;font-size:3rem;text-align: center">Lorem ipsum dolor
+              sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+        </ion-col>
+  
+        <ion-col col-lg-6 col-xl-6 style="padding: 0px 80px 0px 10px">
+          <div class="aboutImage">
+            <h2 class="title welcomeText titleText" style="padding: 50px 10px;">Catering Service B</h2>
+            <p class="titleText" style="color:white;padding: 0px 30px;font-size:3rem;text-align: center">Lorem ipsum dolor
+              sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+        </ion-col>
+  
+      </ion-row>
+    </ion-grid>
+  
+    <ion-grid style="margin-top: 30px;">
+      <div class="first-section2 space">
+        <ion-row no-padding>
+          <ion-col col-lg-6 col-xl-6>
+            <div class="mapContainer2">
+              <div #map id="map" style="height: 100% !important;
+    box-shadow:0 0 20px rgba(0,0,0,0.3) !important; "></div>
+            </div>
+          </ion-col>
+  
+          <ion-col col-lg-6 col-xl-6>
+            <div class="contentSections2 timeSched">
+              <h2 class="title curvyFont welcomeText goldenText">Business Hours</h2>
+              <h2 class="mainTexts headFont" style="font-size:2vw !important"><strong>OPEN FOR SPECIAL OCCASIONS</strong>
+              </h2>
+              <div class="alarmIcon">
+                <ion-icon name="alarm" class="goldenText"></ion-icon>
+              </div>
+              <div class="sched subTexts">
+                <h4 style="font-size: 1vw !important;">Monday - Saturday: 10:00am - 10:00pm</h4>
+                <h4 style="font-size: 1vw !important;">Sunday: 10:00am - 04:00pm</h4>
+              </div>
+              <button ion-button class="menu-button" (click)="goToContactUs()">
+                <h2 class="headFont">CONTACT US</h2>
+              </button>
+            </div>
+          </ion-col>
+        </ion-row>
+      </div>
+    </ion-grid>
+  
+    <ion-grid class="fullGrid footer">
+      <div class="first-section" style="padding-top: 0px !important;margin-top: 10px !important">
+        <ion-row align-items-center="" class="row">
+          <ion-col class="col" col-12="" col-lg-3="" class="text-menu">
+            <div class="container contactUs" style="text-align: left;">
+              <h2 class="headFont" style="margin-bottom: 0px;">BUSINESS HOURS</h2>
+              <hr class="ftrLine" style="width: 20%;height: 30px;color: #C49433 !important; text-align: left">
+              <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Monday -
+                  Thursday: </span>06AM - 10PM</p>
+              <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Friday -
+                  Saturday: </span>10AM - 11:30PM</p>
+              <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Sunday:
+                </span>1PM - 10PM</p>
+              <p class="headFont" style="font-size: 1.5rem;margin-top: 60px;"><span style="font-weight: bold">Booking
+                  Time: </span>24/7 Hours</p>
+            </div>
+          </ion-col>
+          <ion-col class="col" col-12="" col-lg-6="" text-center="">
+            <div class="container contactUs" style="text-align: center">
+              <img src="assets/imgs/logoName.png" alt="" style="height:100px;margin:0px;">
+              <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;">
+                <ion-icon name="pin" color="charcoal" style="font-size:1.5em"></ion-icon> 503 Old Buffalo Street NY, 205
+              </p>
+              <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;">
+                <ion-icon name="call" color="charcoal" style="font-size:1.5em"></ion-icon>(+088) 589-8745
+              </p>
+              <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;">
+                <ion-icon name="mail-open" color="charcoal" style="font-size:1.5em"></ion-icon><span
+                  style="color:#C49433"> infoname@gmail.com</span>
+              </p>
+            </div>
+          </ion-col>
+          <ion-col class="col" col-12="" col-lg-3="" text-center="">
+            <div class="container contactUs" style="text-align: left;">
+              <h2 class="headFont" style="margin-bottom: 0px;">SUBSCRIBE NOW</h2>
+              <hr class="ftrLine" style="width: 20%;height: 30px;color: #C49433 !important; text-align: left">
+              <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;line-height:30px;"> Sign up now to our
+                newsletter to get latest food items and our new events. This theme will help you organize your site
+                without any technical skills.</p>
+  
+              <div class="inputSection">
+                <input class="headFont" type="text" placeholder="Email Address">
+                <button class="headFont">SIGN UP</button>
+              </div>
+            </div>
+          </ion-col>
+        </ion-row>
+      </div>
+    </ion-grid>
+  
+    <ion-grid class="fullGrid">
+      <div class="last-section">
+        <ion-row align-items-center="" class="row">
+          <ion-col class="col" col-12="" col-lg-4="">
+            <div class="container" style="text-align: left">
+              <p class="headFont" style="font-size: 1.5rem;margin:0px;margin-left: 15px;">© 2019 All Rights Reserved</p>
+            </div>
+          </ion-col>
+        </ion-row>
+      </div>
+    </ion-grid>
   </div>
+
   <div class="first-section footer mobSections" style="padding-top: 0px !important;margin-top: -10px !important"
     *ngIf="checkApp">
     <ion-row align-items-center="" class="row">
@@ -319,7 +410,7 @@
           <p style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Friday - Saturday: </span>10AM -
             11:30PM</p>
           <p style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Sunday: </span>1PM - 10PM</p>
-
+  
         </div>
       </ion-col>
       <ion-col class="col" col-12="" col-lg-6="" text-center="">
@@ -339,7 +430,7 @@
               infoname@gmail.com</span>
           </p>
         </div>
-
+  
       </ion-col>
       <ion-col class="col" col-12="" col-lg-3="" text-center="">
         <div class="container contactUs" style="text-align: left;">
@@ -347,23 +438,14 @@
           <hr class="hrFoot">
           <p style="font-size: 1.5rem;margin-top: 0px;"> Sign up now to our newsletter to get latest food items and our
             new events. This theme will help you organize your site without any technical skills.</p>
-
+  
           <div class="inputSection">
             <input type="text" placeholder="Email Address">
             <button>SIGN UP</button>
           </div>
-
+  
         </div>
-
-      </ion-col>
-    </ion-row>
-  </div>
-  <div class="last-section" style="padding-top: 0px !important;" *ngIf="!checkApp">
-    <ion-row align-items-center="" class="row">
-      <ion-col class="col" col-12="" col-lg-4="" class="text-menu">
-        <div class="container" style="text-align: left">
-          <p class="headFont" style="font-size: 1.5rem;margin:0px;margin-left: 15px;">© 2019 All Rights Reserved</p>
-        </div>
+  
       </ion-col>
     </ion-row>
   </div>
