--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -18,7 +18,7 @@
 
 
 <ion-content>
-	<div ngIf="checkApp">
+	<div *ngIf="checkApp">
 	<ion-row style="flex-wrap: inherit;overflow-x: scroll;" class="cover">
 		<h2 class="title  welcomeText">Contact Us</h2>
 
