Fixed spacing problems

--- a/src/pages/catering/catering.html
+++ b/src/pages/catering/catering.html
@@ -53,7 +53,7 @@
             </div>
           </div>
           <button ion-button class="menu-button" (click)="goTo()">
-            <h2>CONTACT US</h2>
+            <p>CONTACT US</p>
           </button>
         </div>
 
@@ -190,7 +190,7 @@
             </div>
             <div class="eventDetails">
               <h2><i class="far fa-calendar-alt"></i> End Date</h2>
-              <h3>20 February, 2019</h3>
+              <h3>20 June, 2019</h3>
             </div>
             <div class="eventDetails">
               <h2><i class="far fa-clock"></i> End Time</h2>
@@ -202,7 +202,7 @@
             </div>
           </div>
           <button ion-button class="menu-button" (click)="goTo()">
-            <h2>CONTACT US</h2>
+            <p>CONTACT US</p>
           </button>
         </div>
 
@@ -242,7 +242,7 @@
             </div>
             <div class="eventDetails">
               <h2><i class="far fa-calendar-alt"></i> End Date</h2>
-              <h3>20 February, 2019</h3>
+              <h3>20 June, 2019</h3>
             </div>
             <div class="eventDetails">
               <h2><i class="far fa-clock"></i> End Time</h2>
@@ -254,7 +254,7 @@
             </div>
           </div>
           <button ion-button class="menu-button" (click)="goTo()">
-            <h2>CONTACT US</h2>
+            <p>CONTACT US</p>
           </button>
         </div>
 
