--- a/src/pages/gallery-tabs/gallery-tabs.html
+++ b/src/pages/gallery-tabs/gallery-tabs.html
@@ -150,7 +150,7 @@
     <ion-grid fixed text-center *ngIf="itemContent.length !== 0">
         <ion-row class="deskCardHolder">
             <ion-col no-margin no-padding col-6 *ngFor="let item of itemContent" class="deskCards">
-                <ion-card>
+                <ion-card style="box-shadow:0px 0px 20px 3px rgba(0,0,0,0.3)">
                     <img src="assets/imgs/{{ item.image }}" alt="">
                     <div class="cardText">
                         <h2>{{ item.name }}</h2>
