Redesigned settings page

--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -161,7 +161,7 @@
 		
 		<div class="map" style="padding-top: 0px !important">
 			<ion-row align-items-center="" class="row">
-				<ion-col class="col map-col" col-12="" col-lg-12="" text-center="">
+				<ion-col class="col map-col" col-12="" col-lg-12="" text-center="" style="padding: 0">
 					<div class="mapContainer2" style="height:500px;">
 						<div #map id="map"></div>
 					</div>
