time functionality, adjusted spacing, contact number

--- a/src/pages/catering/catering.html
+++ b/src/pages/catering/catering.html
@@ -166,14 +166,14 @@
   
     </ion-row>
   
-    <ion-grid>
+    <ion-grid class="eventsContentDesk">
       <ion-row no-padding>
-        <ion-col col-lg-8 col-xl-8 style="padding: 0px 30px 0px 80px">
+        <ion-col col-lg-7 col-xl-8 col-md-6 style="padding: 0px 30px 0px 80px">
           <div class="aboutImage">
   
           </div>
         </ion-col>
-        <ion-col col-lg-4 col-xl-4 style="padding: 0px 80px 0px 10px">
+        <ion-col col-lg-5 col-xl-4 col-md-6 style="padding: 0px 80px 0px 10px">
                 <div class="contentSections3" style="padding-bottom: 50px !important;">
         <div class="subTexts">
           <h2 class="mainTitle">Event Details</h2>
@@ -225,7 +225,7 @@
     <ion-grid style="margin-bottom: 50px;">
       <ion-row no-padding>
   
-        <ion-col col-lg-4 col-xl-4 style="padding: 0px 30px 0px 80px">
+        <ion-col col-lg-5 col-xl-4 style="padding: 0px 30px 0px 80px">
          <div class="contentSections3" style="padding-bottom: 50px !important;">
         <div class="subTexts">
           <h2 class="mainTitle">Event Details</h2>
@@ -261,7 +261,7 @@
       </div>
         </ion-col>
   
-        <ion-col col-lg-8 col-xl-8 style="padding: 0px 80px 0px 10px">
+        <ion-col col-lg-7 col-xl-8 style="padding: 0px 80px 0px 10px">
           <div class="aboutImage">
   
           </div>
@@ -283,7 +283,7 @@
     <ion-grid style="background-color: #f5f5f5; padding-bottom: 60px;">
       <ion-row no-padding>
   
-        <ion-col col-lg-6 col-xl-6 style="padding: 0px 30px 0px 80px">
+        <ion-col col-lg-6 col-xl-6 style="padding: 0px 10px 0px 80px">
           <div class="aboutImage">
             <h2 class="title welcomeText titleText" style="padding: 50px 10px;">Catering Service A</h2>
             <p class="titleText" style="color:white;padding: 0px 30px;font-size:3rem;text-align: center">Lorem ipsum dolor
