--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -61,8 +61,8 @@
   <ion-row no-padding>
     <div class="contentSections secndSection">
       <div class="mainTitle">
-        <h2 class="title curvyFont welcomeText goldenText">Our Menus</h2>
-        <h2 class="mainTexts headFont" style="color: #ffffff !important;">MENU OF THE DAY</h2>
+        <!-- <h2 class="title curvyFont welcomeText goldenText">Our Menus</h2> -->
+        <h2 class="mainTexts headFont" style="color: #ffffff !important;">OUR BESTSELLERS</h2>
       </div>
 
       <div class="subTexts">
@@ -107,7 +107,7 @@
   All Chefs here are originally from Philippines, with over 25 years of culinary experience, maintaining the utmost
   authenticity. We do Catering and Special Events! Prices: $3.75 - $37.00</p> </div>
   
-<h2 class="title mainTexts headText welcomeText headFont" style="font-weight: bold" >Kusina Filipina Has Known For Its</h2>
+<!-- <h2 class="title mainTexts headText welcomeText headFont" style="font-weight: bold" >Kusina Filipina Has Known For Its</h2>
   <ion-slides class="slidesHolder" pager>
     <ion-slide class="slides" >
       <ion-card class="slidesCard">
@@ -303,7 +303,7 @@
             </div>
           </ion-card>
         </ion-slide>
-  </ion-slides>
+  </ion-slides> -->
 <!-- 
 <hr>
 
