--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -139,7 +139,7 @@
       </ion-col>
       <ion-col col-lg-5 col-xl-6>
         <div class="aboutImage">
-          <img src="assets/imgs/aboutConte.png" alt="">
+          <img src="assets/imgs/banner/homepage.jpg" alt="">
         </div>
   
       </ion-col>
@@ -188,14 +188,14 @@
         <ion-col col-lg-6 col-xl-6>
           <div class="contentSections2 timeSched">
             <h2 class="title curvyFont welcomeText goldenText" style="font-size: 6rem !important;">Business Hours</h2>
-            <h2 class="mainTexts headFont" style="font-size:2vw !important"><strong>OPEN FOR SPECIAL OCCASIONS</strong>
+            <h2 class="mainTexts headFont" style="font-size:2vw !important"><strong>Let us do your Catering and Parties</strong>
             </h2>
             <div class="alarmIcon">
               <ion-icon name="alarm" class="goldenText"></ion-icon>
             </div>
             <div class="sched subTexts">
               <h4 style="font-size: 1vw !important;">Monday - Saturday: 10:00am - 10:00pm</h4>
-              <h4 style="font-size: 1vw !important;">Sunday: 10:00am - 04:00pm</h4>
+              <h4 style="font-size: 1vw !important;">Sunday: 10:00am - 08:00pm</h4>
             </div>
             <button ion-button class="menu-button" (click)="goToContactUs()" style="
         margin-top: 20px !important; 
@@ -215,11 +215,9 @@
               <h2 class="headFont" style="margin-bottom: 0px;">BUSINESS HOURS</h2>
               <hr class="ftrLine" style="width: 20%;height: 30px;color: #C49433 !important; text-align: left">
               <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Monday -
-                  Thursday: </span>06AM - 10PM</p>
-              <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Friday -
-                  Saturday: </span>10AM - 11:30PM</p>
+                  Saturday: </span>10AM - 10:00PM</p>
               <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Sunday:
-                </span>1PM - 10PM</p>
+                </span>10:00aM - 8:00PM</p>
               <p class="headFont" style="font-size: 1.5rem;margin-top: 60px;"><span style="font-weight: bold">Booking
                   Time: </span>24/7 Hours</p>
             </div>
@@ -228,14 +226,14 @@
             <div class="container contactUs" style="text-align: center">
               <img src="assets/imgs/logoName.png" alt="" style="height:100px;margin:0px;">
               <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;">
-                <ion-icon name="pin" color="charcoal" style="font-size:1.5em"></ion-icon> 503 Old Buffalo Street NY, 205
+                <ion-icon name="pin" color="charcoal" style="font-size:1.5em"></ion-icon> 4157 Eagle Rock Blvd STE 1, Los Angeles CA 90065
               </p>
               <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;">
-                <ion-icon name="call" color="charcoal" style="font-size:1.5em"></ion-icon>(+088) 589-8745
+                <ion-icon name="call" color="charcoal" style="font-size:1.5em"></ion-icon>323 229 0228
               </p>
               <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;">
                 <ion-icon name="mail-open" color="charcoal" style="font-size:1.5em"></ion-icon><span
-                  style="color:#C49433"> infoname@gmail.com</span>
+                  style="color:#C49433"> info@kusinafilipina.com</span>
               </p>
             </div>
           </ion-col>
@@ -276,11 +274,9 @@
           <div class="container contactUs" style="text-align: left">
             <h2 class="headFont;" style="margin-bottom: 0px;"><strong>BUSINESS HOURS</strong></h2>
             <hr class="hrFoot">
-            <p style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Monday - Thursday: </span>06AM -
-              10PM</p>
-            <p style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Friday - Saturday: </span>10AM -
-              11:30PM</p>
-            <p style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Sunday: </span>1PM - 10PM</p>
+            <p style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Monday - Saturday: </span>10AM -
+              10:00PM</p>
+            <p style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Sunday: </span>10:00AM - 8:00PM</p>
     
           </div>
         </ion-col>
@@ -288,16 +284,15 @@
           <div class="container contactUs" style="text-align: center">
             <img src="assets/imgs/logoName.png" alt="" style="height:100px;margin:0px;">
             <p style="font-size: 1.5rem;margin-top: 0px;">
-              <ion-icon name="map" color="charcoal" style="font-size:1.5em; margin-right: 10px"></ion-icon> 503 Old Buffalo
-              Street NY, 205
+              <ion-icon name="map" color="charcoal" style="font-size:1.5em; margin-right: 10px"></ion-icon> 4157 Eagle Rock Blvd STE 1, Los Angeles CA 90065
             </p>
             <p style="font-size: 1.5rem;margin-top: 0px;">
-              <ion-icon name="call" color="charcoal" style="font-size:1.5em; margin-right: 12px"></ion-icon>(+088) 589-8745
+              <ion-icon name="call" color="charcoal" style="font-size:1.5em; margin-right: 12px"></ion-icon>323 229 0228
             </p>
             <p style="font-size: 1.5rem;margin-top: 0px;">
               <ion-icon name="mail" color="charcoal" style="font-size:1.5em; margin-right: 10px"></ion-icon><span
                 style="color:#C49433">
-                infoname@gmail.com</span>
+                info@kusinafilipina.com</span>
             </p>
           </div>
     
@@ -331,7 +326,7 @@
 				</span><span style="margin-left: 0px !important">Kusina Filipina 2019</span></h5>
 				<h5><span class="iconFont">
 						<ion-icon color="goldenBrown" name="mail"></ion-icon>
-					</span><span style="margin-left: 0px !important">info@gmail.com</span></h5>
+					</span><span style="margin-left: 0px !important">info@kusinafilipina.com</span></h5>
 			<div class="eatIcon">
 				<div class="eatIconContent">
 					<ion-icon name="restaurant" color="goldenBrown"></ion-icon>
