placed map below contact info

--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -155,18 +155,10 @@
 			<!-- </div> -->
 		</div>
 		
-		<div class="map" style="padding-top: 0px !important">
-			<ion-row align-items-center="" class="row">
-				<ion-col class="col map-col" col-12="" col-lg-12="" text-center="" style="padding: 0">
-					<div class="mapContainer2" style="height:500px;">
-						<div #map id="map"></div>
-					</div>
-				</ion-col>
-			</ion-row>
-		</div>
+		
 
 	<ion-grid>
-	<div class="first-section" style="padding-top: 5vw !important;padding-bottom: 0px !important">
+	<div class="first-section" style="padding-top: 1vw !important;padding-bottom: 0px !important">
 			<ion-row align-items-center="" class="row">
 				<ion-col class="col" col-12="" col-lg-6="" >
 					<div class="container contactUsSection" style="text-align: left">
@@ -215,6 +207,16 @@
 			</ion-row>
 		</div>
 	</ion-grid>
+
+	<div class="map" style="padding-top: 20px !important;padding-bottom: 50px">
+			<ion-row align-items-center="" class="row">
+				<ion-col class="col map-col" col-12="" col-lg-12="" text-center="" style="padding: 0">
+					<div class="mapContainer2" style="height:500px;">
+						<div #map id="map"></div>
+					</div>
+				</ion-col>
+			</ion-row>
+		</div>
 
 	<!-- <ion-grid>
 		<div class="first-section" style="padding-top: 0px !important;margin-top: -10px !important">
