--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -26,9 +26,7 @@
 
 	
 
-	<div class="mapContainer">
-		<div #map id="map"></div>
-	</div>
+	
 	<ion-row no-padding>
 		<div class="contentSections timeSched">
 			<h2 class="mainTexts headFont" style="text-align: left; padding-left: 40px;">CONTACT INFO</h2>
@@ -66,15 +64,16 @@
 		</div>
 	
 	</ion-row>
+	<div class="mapContainer">
+		<div #map id="map"></div>
+	</div>
 
-
-	<ion-row no-padding>
+<!-- 	<ion-row no-padding>
 		<div class="imageHoler">
 			<img src="assets/imgs/logoName.png" height="300px;" class="imageConte">
 		</div>
 		<div class="contentSections lastSect" style="padding-bottom: 10px !important;">
 			<h2 class="mainTexts headFont lastSectHead">RESTAURANT</h2>
-			<!-- <hr> -->
 			<div class="subTexts">
 				<p><span>Opening Hours:</span> 10:00am</p>
 				<p ><span>Closing Hours:</span> Monday - Saturday (10:00pm), Sunday (08:00pm)</p>
@@ -85,15 +84,13 @@
 	<ion-row no-padding>
 		<div class="contentSections lastSect" >
 			<h2 class="mainTexts headFont lastSectHead">EVENT CATERING</h2>
-			<!-- <hr> -->
 			<div class="subTexts">
 				<p><span>Monday - Saturday:</span> 10:00am - 10:00pm</p>
-				<!-- <p><span>Friday - :</span> 10:00am - 10:00pm</p> -->
 				<p><span>Sunday:</span> 10:00am - 08:00pm</p>
 				<p><span>Booking Time:</span> 24/7 Hours</p>
 			</div>
 		</div>
-	</ion-row>
+	</ion-row> -->
 
 	
 	<div class="first-section footer mobSections" style="padding-top: 0px !important;margin-top: -10px !important"
@@ -312,7 +309,7 @@
 				</span><span style="margin-left: -8px !important">Kusina Filipina 2019</span></h5>
 				<h5><span class="iconFont">
 						<ion-icon color="goldenBrown" name="mail"></ion-icon>
-					</span><span style="margin-left: -8px !important">info@gmail.com</span></h5>
+					</span><span style="margin-left: -8px !important">info@kusinafilipina.com</span></h5>
 			<div class="eatIcon">
 				<div class="eatIconContent">
 					<ion-icon name="restaurant" color="goldenBrown"></ion-icon>
