Removed 24/7 and founder > about us

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -34,9 +34,9 @@
 				</div>
 				
         <div class="subDesc">
-          <h2>Arizenia</h2>
+          <!-- <h2>Arizenia</h2>
           <h3>JOHN ARIZENIA</h3>
-          <h4  class="subTexts">Founder of Restaurant</h4>
+          <h4  class="subTexts">Founder of Restaurant</h4> -->
           <img src="assets/imgs/banner/homepage.jpg" alt="">
         </div>
 			</div>
@@ -116,9 +116,9 @@
             </p>
           </div>
           <div class="subDesc">
-            <h2>Arizenia</h2>
+            <!-- <h2>Arizenia</h2>
             <h3>JOHN ARIZENIA</h3>
-            <h4 class="subTexts headFont">Founder of Restaurant</h4>
+            <h4 class="subTexts headFont">Founder of Restaurant</h4> -->
           </div>
   
         </div>
@@ -188,8 +188,8 @@
                   Saturday: </span>10AM - 10:00PM</p>
               <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Sunday:
                 </span>10:00aM - 8:00PM</p>
-              <p class="headFont" style="font-size: 1.5rem;margin-top: 60px;"><span style="font-weight: bold">Booking
-                  Time: </span>24/7 Hours</p>
+              <!-- <p class="headFont" style="font-size: 1.5rem;margin-top: 60px;"><span style="font-weight: bold">Booking
+                  Time: </span>24/7 Hours</p> -->
             </div>
           </ion-col>
           <ion-col class="col" col-12="" col-lg-6="" text-center="">
