--- a/src/pages/gallery-tabs/gallery-tabs.html
+++ b/src/pages/gallery-tabs/gallery-tabs.html
@@ -76,7 +76,7 @@
                     <hr class="hrFoot">
                     <p style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Monday - Saturday: </span>10AM - 10PM</p>
                     <p style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Sunday: </span>10AM - 8PM</p>
-                    <p style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Booking Time: </span>24/7 Hours</p>
+                    <!-- <p style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Booking Time: </span>24/7 Hours</p> -->
     
                 </div>
             </ion-col>
@@ -208,7 +208,7 @@
                         <hr class="ftrLine" style="width: 20%;height: 30px;color: #C49433 !important; text-align: left">
                         <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Monday - Saturday: </span>10AM - 10PM</p>
                         <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Sunday: </span>10AM - 8PM</p>
-                        <p class="headFont" style="font-size: 1.5rem;margin-top: 80px;"><span style="font-weight: bold">Booking Time: </span>24/7 Hours</p>
+                        <!-- <p class="headFont" style="font-size: 1.5rem;margin-top: 80px;"><span style="font-weight: bold">Booking Time: </span>24/7 Hours</p> -->
                     </div>
                 </ion-col>
                 <ion-col class="col" col-12="" col-lg-6="" text-center="">
