--- a/src/pages/catering/catering.html
+++ b/src/pages/catering/catering.html
@@ -348,8 +348,8 @@
                   Saturday: </span>10AM - 11:30PM</p>
               <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Sunday:
                 </span>1PM - 10PM</p>
-              <p class="headFont" style="font-size: 1.5rem;margin-top: 60px;"><span style="font-weight: bold">Booking
-                  Time: </span>24/7 Hours</p>
+              <!-- <p class="headFont" style="font-size: 1.5rem;margin-top: 60px;"><span style="font-weight: bold">Booking
+                  Time: </span>24/7 Hours</p> -->
             </div>
           </ion-col>
           <ion-col class="col" col-12="" col-lg-6="" text-center="">
@@ -407,7 +407,7 @@
                     <hr class="hrFoot">
                     <p style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Monday - Saturday: </span>10AM - 10PM</p>
                     <p style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Sunday: </span>10AM - 8PM</p>
-                    <p style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Booking Time: </span>24/7 Hours</p>
+                    <!-- <p style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Booking Time: </span>24/7 Hours</p> -->
     
                 </div>
             </ion-col>
