--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -250,7 +250,7 @@
 						<hr style="width: 20%;height: 30px;color: #C49433 !important; text-align: left"> 
 						<p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Monday - Saturday: </span>10AM - 10PM</p>
 						<p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Sunday: </span>10AM - 8PM</p>
-						<p class="headFont" style="font-size: 1.5rem;margin-top: 70px;"><span style="font-weight: bold">Booking Time: </span>24/7 Hours</p>
+						<!-- <p class="headFont" style="font-size: 1.5rem;margin-top: 70px;"><span style="font-weight: bold">Booking Time: </span>24/7 Hours</p> -->
 					</div>
 				</ion-col>
 				<ion-col class="col" col-12="" col-lg-6="" text-center="">
