--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -381,7 +381,7 @@
         <h2 class="headFont;" style="margin-bottom: 0px;"><strong>BUSINESS HOURS</strong></h2><hr class="hrFoot">
         <p style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Monday - Saturday: </span>10AM - 10PM</p>
         <p style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Sunday: </span>10AM - 8PM</p>
-        <p style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Booking Time: </span>24/7 Hours</p>
+        <!-- <p style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Booking Time: </span>24/7 Hours</p> -->
 
       </div>
     </ion-col>
@@ -745,7 +745,7 @@ info@kusinafilipina.com</span></p>
             <hr class="ftrLine" style="width: 20%;height: 30px;color: #C49433 !important; text-align: left"> 
             <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Monday - Saturday: </span>10AM - 10PM</p>
             <p class="headFont" style="font-size: 1.5rem;margin-top: 0px;"><span style="font-weight: bold">Sunday: </span>10AM - 8PM</p>
-            <p class="headFont" style="font-size: 1.5rem;margin-top: 80px;"><span style="font-weight: bold">Booking Time: </span>24/7 Hours</p>
+            <!-- <p class="headFont" style="font-size: 1.5rem;margin-top: 80px;"><span style="font-weight: bold">Booking Time: </span>24/7 Hours</p> -->
           </div>
         </ion-col>
         <ion-col class="col" col-12="" col-lg-6="" text-center="">
