--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -456,7 +456,7 @@ info@kusinafilipina.com</span></p>
 
             <h2 class="lestMainTexts headFont" style="font-weight: bold;margin-top: 40px;">WE ARE OPEN FOR BREAKFAST, LUNCH, & DINNER</h2>
             <div class="subTexts">
-              <p class="headFont">1062 Bulk Street, Florida, CL 13805 | (608) 853-8569</p>
+              <p class="headFont">4157 Eagle Rock Blvd STE 1, Los Angeles CA 90065</p>
             </div>
             <button ion-button class="menu-button2" (click)="goToAboutUs()">
               <h2 class="headFont">Discover More</h2>
